Home page added

--- a/Projekat/frontend/public/css/global.css
+++ b/Projekat/frontend/public/css/global.css
@@ -30,3 +30,32 @@ h1 {
 body, html {
     font-family: "Montserrat";
 }
+
+.header {
+    padding: 50px;
+}
+.header img{
+    width:100%;
+}
+
+.r-card {
+    padding: 10px;
+    padding: 20px;
+
+    border-bottom: 0.5px solid grey;
+}
+
+.r-card h2{
+    font-size: 25px;
+    font-family: 'MontserratLight';
+}
+
+.r-card img {
+    width: 70%;
+    padding: 10px;
+}
+
+.p-icon{
+    height: 30px;
+    width: 30px;
+}
