--- a/Projekat/frontend/public/css/global.css
+++ b/Projekat/frontend/public/css/global.css
@@ -76,3 +76,14 @@ body, html {
     border: 1px solid #e6e4e1;
     margin: 10px;
 }
+
+.card-img-left {
+    width: 15vw;
+}
+
+.recepie-card {
+    padding: 40px;
+    margin-top: 40px;
+    border-radius: 15px;
+    border: 1px solid #e6e4e1;
+}
